# Systemy-Operacyjne

./: CMakeLists.txt  Monitor.cpp  Monitor.hpp  Philosopher.cpp  Philosopher.hpp  README.md  main.cpp
